mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: tub-example
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: DITAS
        - name: MYSQL_ROOT_PASSWORD
          value: 0der1@b)Opd0Sis0nobxuS[uhId
        image: ditas/tub_example_mysql
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
status: {}
