cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tub-example
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  ports:
  - name: "9042"
    port: 9042
    targetPort: 9042
  - name: "9160"
    port: 9160
    targetPort: 9160
  selector:
    io.kompose.service: cassandra
status:
  loadBalancer: {}
