tubit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubit
  labels:
    selector.key: tubit
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    selector.key: tubit
status:
  loadBalancer: {}
