vdc-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: vdc
  name: vdc
  namespace: tub-example
spec:
  type: NodePort
  ports:
  - name: "8484"
    port: 8484
    targetPort: 8484
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: vdc
status:
  loadBalancer: {}
